# DVDeep

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Common.h
include/layer/: Activation.h  Affine.h  Layer.h  Output.h
include/math/: Matrix.h
include/network/: FFN.h
include/optimizer/: Optimizer.h
src/layer/: Activation.cpp  Affine.cpp  Layer.cpp  Output.cpp
src/math/: Matrix.cpp
src/network/: FFN.cpp
src/optimizer/: Optimizer.cpp
